# Arduino_LSM6DSOX

./: CMakeLists.txt
include/: LSM6DSOX.h
src/: LSM6DSOX.cpp  LSM6DSOX.h
